sap-successfactors/4.0/modules/ROOT/pages/sap-successfactors-connector-config-topics.adoc
= SAP SuccessFactors - Additional Configuration Information - Mule 4

Perform additional configuration for Anypoint Connector for SAP SuccessFactors (SuccessFactors Connector), such as using a query as a filter.

== Use a Query as a Filter

To configure the *Query* operation to perform queries over entities of a specified type, follow these steps:

. Select the *Query* operation on the canvas.
. In the *General* properties tab, select *Query value* from the *Filter* drop-down.
. In the *Value* field, enter the filter options using the format described in the https://www.odata.org/documentation/odata-version-2-0/uri-conventions/[ODATA URI Conventions] site, item 4.5. +
. Select the *Entity set name* from the list.

The following are some example queries:

* `startswith(username, 'Mule') eq true`
* `startswith(username, 'JA') eq true or endswith(username, 'n3') eq true`
* `username eq 'Mike'`

The *Query value* is only used for the *Filter* field. The actual query is built by the connector.  

== Next Step

After you complete configuring the connector, you can try 
the xref:sap-successfactors-connector-examples.adoc[Examples].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
