sap-successfactors/5.0/modules/ROOT/pages/sap-successfactors-connector-config-topics.adoc
= SAP SuccessFactors 5.0 - Additional Configuration Information - Mule 4

Perform additional configuration for Anypoint Connector for SAP SuccessFactors (SuccessFactors Connector), such as using a query as a filter.

== Use a Query as a Filter

To configure the *Query* operation to perform queries over entities of a specified type, follow these steps:

. Select the *Query* operation on the canvas.
. In the *General* properties tab, select *Query value* from the *Filter* drop-down.
. In the *Value* field, enter the filter options using the format described in the https://www.odata.org/documentation/odata-version-2-0/uri-conventions/[ODATA URI Conventions] site, item 4.5. +
. Select the *Entity set name* from the list.

The following are some example queries:

* `startswith(username, 'Mule') eq true`
* `startswith(username, 'JA') eq true or endswith(username, 'n3') eq true`
* `username eq 'Mike'`

The *Query value* is only used for the *Filter* field. The actual query is built by the connector.

[[generate-keystore]]
== Generate a Keystore File

In SAP SuccessFactors Connector 5.0 and later, *The private key from the X.509 certificate.* is removed from OAuth SAML Bearer Assertion Authentication. You can migrate your existing public-private certificates into a keystore file. These steps show how to generate a Java keystore (JKS) file, however you can use any keystore file format. 

. Go to your Mule workspace and open the command prompt (for Windows) or Terminal (for Mac).
. Enter this command:
+
[source]
----
keytool -genkeypair -alias successfactors-cert -keyalg RSA -keystore successfactors-cert.jks
----
+
. Enter the following information:
+
** Password for the keystore
** Your first name and last name
** Your organization unit
** Your city and state, and the two-letter code for your country
+
The system generates a Java keystore file (JKS format) that contains a private or public key pair in your workspace.
+
. Provide the file path for the keystore in your connector configuration.
+
Enter this command:
+
[source]
----
keytool -exportcert -alias successfactors-cert -file successfactors-cert.crt -keystore successfactors-cert.jks
----
+
The system exports the public key from the keystore into the workspace. This is the public key to enter in your SuccessFactors instance.
+
. Verify that you have both the keystore (`successfactors-cert.jks`) and the public key (`successfactors-cert.crt`) files in your workspace.

== Next Step

After you complete configuring the connector, you can try the xref:sap-successfactors-connector-examples.adoc[Examples].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
